--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "use-sound": "^4.0.1",
     "zod": "^3.22.2"
   }
 }
